# zm

./: .gitignore  Cargo.toml  README.md  setup_test_mail.sh
assets/themes/: adventure.json  alduin.json  asciinema.json  ayu.json  catppuccin.json  everforest.json  fahrenheit.json  flexoki.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  kibble.json  macos-classic.json  matrix.json  mellifluous.json  molokai.json  solarized.json  spaceduck.json  tokyonight.json  twilight.json
migrations/: 20260321000001_initial.sql  20260321000002_ui_state.sql  20260322000001_semantic_search.sql
src/: assets.rs  error.rs  main.rs
src/account/: mod.rs
src/actions/: handler.rs  mod.rs  ops.rs
src/components/: compose_actions.rs  compose_metadata.rs  editable_field.rs  folder_item.rs  mail_actions.rs  mail_list_item.rs  mail_metadata.rs  mod.rs  readonly_field.rs  server_fields.rs  status_bar.rs  status_item.rs
src/config/: mod.rs
src/credentials/: mod.rs
src/db/: mod.rs
src/db/repo/: mailboxes.rs  messages.rs  mod.rs  ui_state.rs
src/mail/: imap.rs  mod.rs  smtp.rs
src/search/: embedder.rs  engine.rs  mod.rs  query.rs  store.rs
src/state/: folder_tree.rs  mail.rs  mailbox.rs  mod.rs
src/sync/: engine.rs  idle.rs  mod.rs  state.rs
src/views/: mail_list.rs  mod.rs
src/views/compose/: mod.rs
src/views/inbox/: mod.rs  sidebar.rs
src/views/mail_detail/: mod.rs
src/views/search/: mod.rs  search_result_item.rs
src/views/settings/: accounts.rs  general.rs  mod.rs
src/views/setup_wizard/: mod.rs  section_auth.rs  section_basics.rs  section_servers.rs  section_test.rs
